# cpp

./: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  Readme.md  annotated.html  classCaptureCout-members.html  classCaptureCout.html  classaserver_1_1server-members.html  classaserver_1_1server.html  classaserver_1_1session-members.html  classaserver_1_1session.html  classaserver_1_1session__coll__graph.md5  classaserver_1_1session__inherit__graph.map  classdb_1_1database-members.html  classdb_1_1database.html  classdb_1_1parser-members.html  classdb_1_1parser.html  classdb_1_1table-members.html  classdb_1_1table.html  classes.html  classmt_1_1matrix-members.html  classmt_1_1matrix.html  classmt_1_1matrix_1_1internal__iter-members.html  classmt_1_1matrix_1_1internal__iter.html  classmt_1_1matrix_1_1internal__iter__coll__graph.map  classmt_1_1matrix_1_1internal__iter__coll__graph.md5  classmt_1_1matrix_3_01T_00_01default__value_00_011_01_4-members.html  classmt_1_1matrix_3_01T_00_01default__value_00_011_01_4.html  classmt_1_1matrix_3_01T_00_01default__value_00_011_01_4_1_1store__proxy-members.html  classmt_1_1matrix_3_01T_00_01default__value_00_011_01_4_1_1store__proxy.html  database_8cpp.html  database_8cpp__incl.map  database_8cpp__incl.md5  database_8hpp.html  database_8hpp__dep__incl.map  database_8hpp__dep__incl.md5  database_8hpp__incl.map  database_8hpp__incl.md5  database_8hpp_source.html  dir_000016_000015.html  dir_000017_000014.html  (+140 more)
.github/workflows/: main.yml  release.yml
dz_1/: CMakeLists.txt  build.sh  version.h
dz_1/src/: CMakeLists.txt  lib.cpp  main.cpp
dz_1/tests/: CMakeLists.txt  test_version.cpp
dz_10/: CMakeLists.txt  Makefile
dz_10/lib/include/: async.h  bulk.hpp  parse_cmd.hpp  qeue.hpp
dz_10/lib/src/: async.cpp
dz_10/server/: async_reader.cpp  async_reader.hpp  main.cpp  server.cpp  server.hpp  session.cpp  session.hpp
dz_10/test/: test_parse_cmd.cpp
dz_11/: CMakeLists.txt
dz_11/lib/include/: database.hpp  parser.hpp  table.hpp
dz_11/lib/src/: database.cpp  parser.cpp
dz_11/server/: main.cpp  server.cpp  server.hpp  session.cpp  session.hpp
dz_11/test/: test.py  test_parse_cmd.cpp
dz_12/average/: Makefile  mapper.cpp  reducer.cpp
dz_12/average/input/: dataset_info.txt
dz_12/variance/: mapper.cpp  reducer.cpp  run_locally.sh
dz_13/source/: CMakeLists.txt  interface_binary_classifier.hpp  logreg_classifier.cpp  logreg_classifier.hpp  main.cpp  reader.cpp  reader.hpp
dz_13/source/test/: test_data_logreg.txt  test_fashion.cpp
dz_2/: CMakeLists.txt  lib.cpp  lib.h  main.cpp  test_filter_ip.cpp
dz_3/: CMakeLists.txt  best_allocator.h  best_iterator.h  best_vector.cpp  best_vector.h  lib.cpp  lib.h  main.cpp  test_allocate.cpp
dz_4/: CMakeLists.txt  lib.cpp  main.cpp  parse_ip.hpp  test_print_ip.cpp
dz_5/: CMakeLists.txt  Makefile  lib.cpp  lib.h  main.cpp  test_editor.cpp
dz_5/application/control/: control.hpp
dz_5/application/document/: document.hpp
dz_5/application/serialize/: serialize.hpp
dz_5/application/shape/: circel.hpp  line.hpp  point.hpp  rectangle.hpp  shape.hpp
dz_5/application/view/: render.hpp  view.hpp
dz_6/: CMakeLists.txt  Makefile  lib.cpp  lib.h  main.cpp  matrix.hpp  test_matrix.cpp
dz_7/: CMakeLists.txt  Makefile  bulk.hpp  ioutdev.hpp  lib.cpp  lib.h  main.cpp  parse_cmd.hpp  test_input.bulk  test_parse_cmd.cpp
dz_8/: CMakeLists.txt  Makefile  lib.cpp  lib.h  main.cpp  test_bayan.cpp
dz_8/include/: bayan.hpp  file_info.hpp  hash.hpp
dz_8/src/: bayan.cpp  hash.cpp
dz_8/test_data/: world.txt
dz_9/: CMakeLists.txt  Doxyfile.in  Makefile  main.cpp
dz_9/lib/include/: async.h  bulk.hpp  ioutdev.hpp  lib.h  qeue.hpp
dz_9/lib/src/: async.cpp  bulk.cpp  lib.cpp  parse_cmd.cpp
dz_9/test/: main.cpp  test_parse_cmd.cpp
queue/: CMakeLists.txt  Makefile  bench.sh  conanfile.txt
queue/benchmark/: bench_queue.cpp  bench_queue_mutex.cpp  bench_queue_no_opt.cpp  bench_queue_without_aling.cpp  bench_queue_without_memory.cpp  mqueue.hpp
queue/include/base/: config.hpp  queue.hpp
queue/include/net/: server.hpp  session.hpp
queue/include/serialize/: serialize.hpp
queue/src/: main.cpp
queue/src/base/: boost_json.cpp  config.cpp  queue.cpp
queue/src/net/: server.cpp  session.cpp
queue/test/: .#test_network.py  config.json  test_network.py  test_queue.cpp
search/: all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+18 more)
